ballot/ballot.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    apps: ballot
  name: ballot
spec: 
  selector: 
    app: ballot
  ports:
  - name: ballot
    port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ballot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ballot
  template:
    metadata:
      labels:
        app: ballot
    spec:
      containers:
      - name: ballot
        image: local-registry:5002/ballot:latest
        ports:
        - containerPort: 8080
